<resources>
    <string name="app_name">WeatherApp</string>
    <string name="appname">Almaty\nWeather</string>
    <string name="login_text">Вход</string>
    <string name="input_email_text">Почта</string>
    <string name="input_password_text">Пароль</string>
    <string name="confirm_password_text">Подтвердите пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="create_account_text">Создать аккаунт</string>
    <string name="register_title_text">Регистрация</string>
    <string name="register_btn_text">Зарегистрироваться</string>
    <string name="back_to_login">Войти в аккаунт</string>
    <string name="error_empty_field">Пустая строка</string>
    <string name="error_user_not_found">Пользователь не найден</string>
    <string name="error_invalid_pass_or_email">Не верный пароль или почта</string>
    <string name="error_empty_password_repeat">Повторите пароль</string>
    <string name="error_empty_password">Введите пароль</string>
    <string name="error_empty_email">Введите электронную почту</string>
    <string name="error_weak_password">Ваш пароль ненадежен</string>
    <string name="error_weak_password_letters">Ваш пароль должен содержать заглавные буквы</string>
    <string name="error_password_mismatch">Ваши пароли разные</string>
    <string name="city_name">Алматы</string>
</resources>